additional files and functiions blueprints v3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ add_compile_options(-Wall -Wextra -Werror -pedantic -pedantic-errors -g)
 
 include_directories(${PROJECT_SOURCE_DIR})
 
-add_executable(main main.cpp menu.cpp stadium.cpp) 
+add_executable(main main.cpp menu.cpp menu_main_func.cpp stadium.cpp seat.cpp) 
